# RAG-pdf

./: README.md  get_embedding_function.py  pyproject.toml  query_data.py  test_rag.py
chroma/: chroma.sqlite3
