[project]
name = "rag-pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.39.3",
    "chromadb>=1.0.15",
    "groq>=0.29.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.5",
    "langchain-huggingface>=0.3.0",
    "pypdf>=5.7.0",
    "pytest>=8.4.1",
    "sentence-transformers>=5.0.0",
]
